--- a/wrangler.toml
+++ b/wrangler.toml
@@ -25,11 +25,12 @@ GOOGLE_CLIENT_ID = "505000584820-s2veap633g8atdv0fkme50i3l3nkos4l.apps.googleuse
 [assets]
 directory = "./public"
 not_found_handling = "single-page-application"
+run_worker_first = true
 
 # logs
 [observability]
 [observability.logs]
-enabled = false
+enabled = true
 head_sampling_rate = 1
 invocation_logs = true
 persist = true
