--- a/wrangler.toml
+++ b/wrangler.toml
@@ -22,9 +22,9 @@ id = "bb6863cd22b549f0af55a6616f093ba3"
 GOOGLE_CLIENT_ID = "505000584820-s2veap633g8atdv0fkme50i3l3nkos4l.apps.googleusercontent.com"
 
 # Static assets
-[assets]
+[[assets]]
+binding = "ASSETS"
 directory = "./public"
-not_found_handling = "single-page-application"
 run_worker_first = true
 
 # logs
