--- a/wrangler.toml
+++ b/wrangler.toml
@@ -24,8 +24,7 @@ GOOGLE_CLIENT_ID = "505000584820-s2veap633g8atdv0fkme50i3l3nkos4l.apps.googleuse
 # Static assets
 [assets]
 directory = "./public"
-binding = "ASSETS"
-run_worker_first = true
+not_found_handling = "single-page-application"
 
 # logs
 [observability]
