--- a/wrangler.toml
+++ b/wrangler.toml
@@ -24,7 +24,9 @@ GOOGLE_CLIENT_ID = "505000584820-s2veap633g8atdv0fkme50i3l3nkos4l.apps.googleuse
 # Static assets
 [assets]
 directory = "./public"
+html_handling = "auto-trailing-slash"
 not_found_handling = "single-page-application"
+run_worker_first = true
 
 # logs
 [observability]
